--- a/TiendaRopa/nbproject/private/private.properties
+++ b/TiendaRopa/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\tiago\\AppData\\Roaming\\NetBeans\\24\\build.properties
+file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\Jen\\Desktop\\java\\mysql-connector-j-9.1.0
+user.properties.file=C:\\Users\\Jen\\AppData\\Roaming\\NetBeans\\24\\build.properties
