--- a/TiendaRopa/nbproject/project.properties
+++ b/TiendaRopa/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=TiendaRopa
-application.vendor=yyy
+application.vendor=tiago
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -35,10 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TiendaRopa
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\tiago\\Downloads\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MyLibrary.classpath}
+    ${file.reference.mysql-connector-j-9.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -78,7 +79,7 @@ main.class=com.main.TiendaRopa
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_23
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
