Final commit ojala

--- a/TiendaRopa/nbproject/project.properties
+++ b/TiendaRopa/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TiendaRopa
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\tiago\\Downloads\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar=../mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
