--- a/TiendaRopa/nbproject/private/private.properties
+++ b/TiendaRopa/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 
-user.properties.file=C:\\Users\\tiago\\AppData\\Roaming\\NetBeans\\24\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Romina\\AppData\\Roaming\\NetBeans\\24\\build.properties
